--- a/package.json
+++ b/package.json
@@ -9,12 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "@ant-design/icons": "^6.0.0",
+    "@react-oauth/google": "^0.12.1",
+    "antd": "^5.24.6",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.13",
+    "google-auth-library": "^9.15.1",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "mongoose": "^8.13.1",
+    "next": "15.2.4",
+    "postcss": "^8.5.3",
+    "rc-util": "^5.44.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.1"
   }
 }
