--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
