--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@nivo/colors": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@nivo/stream": "^0.99.0",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.24.6",
     "autoprefixer": "^10.4.21",
@@ -17,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.2",
     "google-auth-library": "^9.15.1",
@@ -29,7 +34,8 @@
     "rc-util": "^5.44.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
