--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.12.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
