--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
