--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
