--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.2",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.12.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +29,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
+    "pdf2table": "^0.0.2",
     "postcss": "^8.5.3",
     "rc-util": "^5.44.4",
     "react": "^18.3.1",
