--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -29,6 +30,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
+    "next-sitemap": "^4.2.3",
     "pdf2table": "^0.0.2",
     "postcss": "^8.5.3",
     "rc-util": "^5.44.4",
