--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
-    "redis": "^5.6.0",
-    "zod": "^4.0.10"
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
