--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@react-oauth/google": "^0.12.1",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.24.6",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
