--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^6.0.0",
     "@react-oauth/google": "^0.12.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "antd": "^5.24.6",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
