--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-oauth/google": "^0.12.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
