--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^6.0.0",
     "@google/generative-ai": "^0.24.1",
     "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "antd": "^5.24.6",
@@ -44,8 +45,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
