--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "google-auth-library": "^9.15.1",
+    "html2canvas": "^1.4.1",
     "iso-country-currency": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^4.0.0",
     "lodash": "^4.17.21",
+    "modern-screenshot": "^4.6.7",
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "next": "^15.2.6",
